kubernetes/apps/storage/mailu/zpush/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mailu-zpush
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mail.${DOMAIN}`) && PathPrefix(`/Microsoft-Server-ActiveSync`)
      services:
        - kind: Service
          name: mailu-zpush
          namespace: storage
          port: 80
  tls:
    domains:
      - main: mail.${DOMAIN}
